--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="nav">
         <section class="nav__contenedor contenedor">
           <figure class="nav__logo">
-            <img src="./img/bx-game.svg" class="hero__picture" />
+            <img src="img/bx-game.svg" class="hero__picture" />
             <h2 class="nav__titulo">PlayerGamer</h2>
           </figure>
 
@@ -63,7 +63,7 @@
           <div class="about__secciones">
             <div class="about__seller">
               <figure class="about__picture">
-                <img src="./img/gamer1.jpg" alt="jugador" class="about__img1" />
+                <img src="img/gamer1.jpg" alt="jugador" class="about__img1" />
               </figure>
               <h3 class="about__subtitulo">Por que vender</h3>
               <p class="about__text">
@@ -77,7 +77,7 @@
 
             <div class="about__seller">
               <figure class="about__picture">
-                <img src="./img/gamer4.jpg" alt="jugador" class="about__img1" />
+                <img src="img/gamer4.jpg" alt="jugador" class="about__img1" />
               </figure>
               <h3 class="about__subtitulo">Por que comprar</h3>
               <p class="about__text">
@@ -99,11 +99,11 @@
             Para todo game over existe un play again
           </h3>
           <div class="gallery__contenedor">
-            <img src="./img/img4.jpg" class="gallery__picture" />
+            <img src="img/img4.jpg" class="gallery__picture" />
 
-            <img src="./img/img2.jpg" class="gallery__picture" />
+            <img src="img/img2.jpg" class="gallery__picture" />
 
-            <img src="./img/img3.jpg" class="gallery__picture" />
+            <img src="img/img3.jpg" class="gallery__picture" />
           </div>
           <div class="gallery__game">
             <div class="gallery__redes">
@@ -304,29 +304,55 @@
               </figure>
               <div class="noticias__textos">
                 <h3 class="noticias__subtitulo">FORTNITE SE VA DE CHINA.</h3>
-                <p>
+                <p class="noticias__paragraf">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                   Nesciunt iste perferendis cupiditate beatae nihil nisi
-                  repellendus doloremque minus quam consectetur vel sapiente,
-                  quas veritatis aperiam sunt et porro quos minima.
+                  repellendus doloremque repellendus doloremque repellendus
+                  doloremque ciunt iste perferendis cupiditate beatae nihil nisi
+                  repellendus doloremque repellendus doloremque repellendus
+                  doloremque
                 </p>
               </div>
             </div>
             <div class="noticias__informacion notiUno">
-              <figure class="noticias__pintura">
-                <img src="img/callNoti.jpg" class="noticias__imagen" />
-              </figure>
-              <div>
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>
+              <figure class="noticias__imagenUno"></figure>
+              <div class="noticias__excrito">
+                <h3 class="noticias__tituloNoticia">
+                  Warzone en Mobile, podria llegar en diciembre 2022.
+                </h3>
+                <p class="noticias__paragraf">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Exercitationem labore tenetur rem corrupti voluptate suscipit
-                  voluptates optio vel modi voluptatem!
+                  voluptates optio vel modi voluptatem! repellendus doloremque
                 </p>
               </div>
             </div>
-            <div class="notiDos">tres</div>
-            <div class="notiTres">cuatro</div>
+            <div class="noticias__informacion notiDos">
+              <figure class="noticias__imagenDos"></figure>
+              <div class="noticias__excrito">
+                <h3 class="noticias__tituloNoticia">
+                  Disminuyen las ventas de Grand Theft Auto V.
+                </h3>
+                <p class="noticias__paragraf">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Exercitationem labore tenetur rem corrupti voluptate suscipit
+                  voluptates optio vel modi voluptatem! repellendus doloremque
+                </p>
+              </div>
+            </div>
+            <div class="noticias__informacion notiTres">
+              <figure class="noticias__imagenTres"></figure>
+              <div class="noticias__excrito">
+                <h3 class="noticias__tituloNoticia">
+                  The Witcher 3 llega a 'next-gen'.
+                </h3>
+                <p class="noticias__paragraf">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Exercitationem labore tenetur rem corrupti voluptate suscipit
+                  voluptates optio vel modi voluptatem! repellendus doloremque
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -353,7 +379,7 @@
         </div>
 
         <figure class="footer__img">
-          <img src="img/mail.svg" class="footer__picture" />
+          <img src="img/socialUno.svg" class="footer__picture" />
         </figure>
       </div>
     </footer>
