--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
       <nav class="nav">
         <div class="nav__contenedor contenedor">
           <figure class="nav__logo">
-            <img src="img/bx-game.svg" class="hero__picture" />
+            <img src="img/bx-game.svg" class="nav__pintura" />
             <h2 class="nav__titulo">PlayerGamer</h2>
           </figure>
 
           <label for="menu" class="nav__label">
-            <img src="/img/bx-menu.svg" class="nav__img" />
+            <img src="./img/bx-menu.svg" class="nav__img" />
           </label>
           <input type="checkbox" id="menu" class="nav__input" />
 
@@ -56,10 +56,9 @@
             <input type="submit" class="hero__boton" />
           </form>
         </div>
-
-        <!-- <figure class="hero__picture">
+        <figure class="hero__picture">
           <img src="img/ilustracion.svg" class="hero__img" />
-        </figure> -->
+        </figure>
       </section>
     </header>
 
