--- a/pages/producto.html
+++ b/pages/producto.html
@@ -19,7 +19,7 @@
           </figure>
 
           <label for="menu" class="nav__label">
-            <img src="/img/bx-menu.svg" class="nav__img" />
+            <img src="../img/bx-menu.svg" class="nav__img" />
           </label>
           <input type="checkbox" id="menu" class="nav__input" />
 
