--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PlayerGamer</title>
-    <link rel="stylesheet" href="./CSS/estilos.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
     <!-- <link rel="stylesheet" href="normalize.css" /> -->
   </head>
 
@@ -129,9 +129,9 @@
         </div>
       </section>
 
-      <section class="portfolio">
+      <section class="portafolio">
         <div class="contenedor">
-          <div class="portfolio__control">
+          <div class="portafolio__control">
             <div class="portafolio__grid">
               <div class="portafolio__informacion nota">
                 <div class="portafolio__titles">
